# NC-TaxTriggers

./: README.md  pyproject.toml
data/: 22instateshares.csv  NST-EST2025-ALLDATA.csv  Pew_ReservesData_2025.csv  fig1_state_taxtype_2026.csv  fig2_state_corptaxtype_2026.csv  fig4_source.csv  fig5_source.csv  nc_tax_trigger_results_2026.csv  nc_tax_trigger_results_2027 copy.csv  nc_tax_trigger_results_2027.csv  nc_tax_trigger_results_2028 copy.csv  nc_tax_trigger_results_2028.csv  popranks2025_cps_uhaul_uvl.csv  tab5_netmigr_rank_full_2025.csv  uvl_2023_MoversStudyByState.csv  uvl_2024_MoversStudyByState.csv  uvl_2025_MoversStudyByState.csv
images/: fig1_state_taxtype_2026.html  fig2_state_corptaxtype_2026.html  fig3_net_domestic_migration_2025.html  fig4_nc_raintotbal_tseries.html  fig5_rain_totbal_pct_2025.html  fig6_nc_indtax_tseries.html  fig7_HistNC2026revenue.html
