[project]
name = "nc-taxtriggers"
version = "0.0.0"
description = "North Carolina tax triggers analysis"
readme = "README.md"
license = "CCO-1.0"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Richard W. Evans" },
]
keywords = [
    "north carolina",
    "income tax",
    "income tax triggers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "bokeh",
    "bokeh_sampledata",
    "geopandas",
    "openpyxl",
    "pathlib",
    "policyengine-us",
    "ipython",
    "jupyter",
    "ipykernel"
]

[tool.uv]
package = false

[project.urls]
Repository = "https://github.com/OpenSourceEcon/NC-TaxTriggers"
Issues = "https://github.com/OpenSourceEcon/NC-TaxTriggers/issues"
